system/gatekeeper/tests/fixtures/high-cpu-requests/pod-failure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy
  labels:
    support-group: foo-group
    service: dummy
spec:
  containers:
  - name: dummy-big
    image: alpine:3
    args: [ "sleep", "86400" ]
    resources:
      limits:
        cpu: "10"
        memory: 3Gi
      requests:
        cpu: "6"
        memory: 2Gi
  - name: dummy-small
    image: alpine:3
    args: [ "sleep", "86400" ]
    resources:
      limits:
        cpu: 128m
        memory: 128Mi
      requests:
        cpu: 64m
        memory: 64Mi
