system/gatekeeper/tests/fixtures/high-cpu-requests/pod-only-one-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy
  labels:
    ccloud/support-group: foo-group
    ccloud/service: dummy
spec:
  containers:
  - name: dummy
    image: alpine:3
    args: [ "sleep", "86400" ]
    resources:
      limits:
        cpu: "10"
        memory: 3Gi
      requests:
        cpu: "5"
        memory: 2Gi
  - name: dummy
    image: alpine:3
    args: [ "sleep", "86400" ]
